--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "seg3125-project-1",
-  "homepage": ".",
-  "private": true,
+  "homepage": "https://schematicdnb.github.io/Carls-Cars/",
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "gh-pages": "^6.3.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-bootstrap-icons": "^1.11.5",
